# bananagrams

./: bananagrams.cabal  cabal.project  words
app/: Board.hs  Main.hs  PartialMatch.hs  SoftMatch.hs  WordMap.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
