cabal-version:      2.4
name:               bananagrams
version:            0.1.0.0

author:             Simon Curtis
maintainer:         scurtis142@gmail.com

executable bananagrams
    main-is:          Main.hs

    build-depends:    base ^>=4.16.3.0
                     ,mtl
                     ,unordered-containers
                     ,vector
                     ,stm
                     ,stm-chans
                     ,async

    other-modules:    WordMap
                     ,SoftMatch
                     ,PartialMatch
                     ,Board

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall -Werror -threaded
